<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Origami Messenger</string>
    <string name="title_conversation_detail">Conversation Detail</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with
        Firebase.
    </string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in_sign_up">Account</string>
    <string name="title_activity_languages">LanguagesActivity</string>

    <string name="action_settings">Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="conversations">Conversations</string>
    <string name="support_languages">Supported Languages</string>
    <string name="search">Search</string>
    <string name="please_sign_in_to_use_imtranslate">Please sign in to use Origami Messenger</string>
    <string name="search_for_users_to_chat_to">Search for users with which to chat</string>
    <string name="no_results">No results</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="play_services_error">Google Play Services error.</string>

    <string name="debug_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7204085226366830/4833674308</string>
    <string name="oauth_web_application_client_id" translatable="false">149233706805-i33gvku5jq1fomlgbcoj4vgvknl9oga7.apps.googleusercontent.com</string>
    <string name="share">Share</string>
    <string name="check_out">Check out Origami Messenger</string>

    <string name="language_dialog_format">Your language is currently set as <xliff:g id="language">%1$s</xliff:g>, would you like to change it?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_of_service">Privacy Policy</string>
</resources>
