<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.sluman.imtranslate.ConversationDetailActivity"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_text"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/please_sign_in_to_use_imtranslate"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/primaryLight"
                android:visibility="gone"
                android:background="@drawable/circle_background"
                />
            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/desc_firebase_lockup"
                android:gravity="center" />


            <TextView
                android:id="@+id/status"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/signed_out" />

            <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                tools:text="Firebase User ID: 123456789abc" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/sign_out_and_disconnect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/disconnect_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnect"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
